--- a/contents/config.yml
+++ b/contents/config.yml
@@ -1,5 +1,5 @@
-title: Sen Li's Homepage
-page-top-title: Sen Li
+title: Yuhang Xia's Homepage
+page-top-title: Yuhang Xia
 top-section-bg-text: Computer Science
-home-subtitle: Sen Li&ensp;|&ensp;李森
-copyright-text: '&copy; Sen Li 2023-2025. All Rights Reserved.'
+home-subtitle: Yuhang Xia&ensp;|&ensp;夏宇航
+copyright-text: '&copy; Yuhang Xia 2023-2025. All Rights Reserved.'
